# vedopp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: docs.cmake  lint-targets.cmake  lint.cmake  variables.cmake
data/: cube.stl  spider.ply
docs/: Doxyfile.in
example/: CMakeLists.txt  cpp_version.cpp  empty_example.cpp  load_file.cpp
example/mesh/: plot_wireframe.cpp
example/shapes/: convex_hull.cpp
src/: main.cpp
src/vedo/: errors.h  types.h
src/vedo/core/: common_algorithms.h  common_algorithms.tpp  core_utilities.tpp  core_utilties.h  point_algorithms.h  point_algorithms.tpp
src/vedo/file_io/: helpers.cpp  helpers.h  reader.cpp  reader.h
src/vedo/mesh/: mesh.cpp  mesh.h
src/vedo/plotter/: plotter.cpp  plotter.h  show.cpp  show.h
src/vedo/points/: points.cpp  points.h
src/vedo/shapes/: shapes.cpp  shapes.h
src/vedo/transformations/: transformations.cpp  transformations.h
src/vedo/visual/: common_visual.h  common_visual.tpp  mesh_visual.h  mesh_visual.tpp  points_visual.h  points_visual.tpp
test/: CMakeLists.txt
test/src/: vedo_test.cpp
test/src/test/: vedo_test.cpp
test/src/test/mesh/: test_mesh.cpp  test_vedo_mesh_num_points.cpp
